<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionHomeInfo"
        android:icon="@drawable/ic_info_24"
        android:title="@string/about_app" />
    <item
        android:id="@+id/actionSetDeviceDefaultTones"
        android:icon="@drawable/ic_brand_awareness_24"
        android:title="@string/set_device_default_tones" />
    <item
        android:id="@+id/actionUserPreferences"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/user_preferences" />
    <item
        android:id="@+id/actionResetAllRingtones"
        android:icon="@drawable/ic_reset_24"
        android:title="@string/reset_all_ringtones" />
    <item
        android:id="@+id/actionChangeAccount"
        android:icon="@drawable/ic_attribution_24"
        android:title="@string/pick_contact_source_btn_label" />
</menu>
