<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/no_internet_description"
        android:src="@drawable/ic_no_internet" />


    <TextView
        android:id="@+id/noInternetDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/textColor"
        android:text="@string/no_internet_description"
        android:textAlignment="center" />

    <Button
        android:id="@+id/openNetworkSettingsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:text="@string/open_network_settings" />

    <Button
        android:id="@+id/topBarEndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/home"
        android:visibility="gone" />

</LinearLayout>