<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="8dp"
    android:paddingEnd="20dp"
    android:paddingBottom="8dp">

    <com.milen.grounpringtonesetter.customviews.ui.texts.CustomTextView
        android:id="@+id/ctvBackupExportProgressMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_restore_export_progress_message"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/pbBackupExportProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0" />

    <com.milen.grounpringtonesetter.customviews.ui.texts.CustomTextView
        android:id="@+id/ctvBackupExportProgressPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:accessibilityLiveRegion="polite"
        android:gravity="center"
        android:text="@string/backup_restore_export_progress_initial"
        android:textSize="16sp" />

    <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomRoundedButton
        android:id="@+id/crbBackupProgressCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:buttonLabel="@string/cancel" />
</LinearLayout>
